--- a/archives/toutiao-search/2023-11-06.md
+++ b/archives/toutiao-search/2023-11-06.md
@@ -1,50 +1,73 @@
 # 2023-11-06
 
-共 244 条
+共 263 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 06 2023 13:00:55 GMT+0800 (China Standard Time) -->
-1. [父子俩5.2元购入汽油6.7元出售](https://so.toutiao.com/search?keyword=父子俩5.2元购入汽油6.7元出售)
-1. [直击东北多地暴雪现场](https://so.toutiao.com/search?keyword=直击东北多地暴雪现场)
-1. [第一届学青会开幕](https://so.toutiao.com/search?keyword=第一届学青会开幕)
-1. [乌军举行颁奖仪式俄军导弹从天而降](https://so.toutiao.com/search?keyword=乌军举行颁奖仪式俄军导弹从天而降)
-1. [中央气象台三预警齐发](https://so.toutiao.com/search?keyword=中央气象台三预警齐发)
+<!-- 最后更新时间 Mon Nov 06 2023 14:00:49 GMT+0800 (China Standard Time) -->
 1. [退休人员可以到农村买宅基地吗](https://so.toutiao.com/search?keyword=退休人员可以到农村买宅基地吗)
-1. [天津助学金事件通报：不存在挤占](https://so.toutiao.com/search?keyword=天津助学金事件通报：不存在挤占)
+1. [父子俩5.2元购入汽油6.7元出售](https://so.toutiao.com/search?keyword=父子俩5.2元购入汽油6.7元出售)
+1. [第一届学青会开幕](https://so.toutiao.com/search?keyword=第一届学青会开幕)
 1. [中央气象台：这次暴雪极端性相当强](https://so.toutiao.com/search?keyword=中央气象台：这次暴雪极端性相当强)
-1. [研究发现血型与疾病的发生有相关性](https://so.toutiao.com/search?keyword=研究发现血型与疾病的发生有相关性)
-1. [两周内两次挑衅 加拿大意欲何为](https://so.toutiao.com/search?keyword=两周内两次挑衅+加拿大意欲何为)
+1. [中纪委打下今年第40“虎”](https://so.toutiao.com/search?keyword=中纪委打下今年第40“虎”)
+1. [天津助学金事件通报：不存在挤占](https://so.toutiao.com/search?keyword=天津助学金事件通报：不存在挤占)
+1. [女子手指被丈夫2根头发扎出血](https://so.toutiao.com/search?keyword=女子手指被丈夫2根头发扎出血)
+1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
+1. [女子在足疗店按摩遭男技师猥亵](https://so.toutiao.com/search?keyword=女子在足疗店按摩遭男技师猥亵)
+1. [乌军举行颁奖仪式俄军导弹从天而降](https://so.toutiao.com/search?keyword=乌军举行颁奖仪式俄军导弹从天而降)
 1. [女子将3岁女儿推入池塘已被刑拘](https://so.toutiao.com/search?keyword=女子将3岁女儿推入池塘已被刑拘)
 1. [美团外卖辟谣45岁以上骑手不再派单](https://so.toutiao.com/search?keyword=美团外卖辟谣45岁以上骑手不再派单)
-1. [韩国瑜做侯友宜副手？李乾龙回应](https://so.toutiao.com/search?keyword=韩国瑜做侯友宜副手？李乾龙回应)
-1. [科学家发现地球正在漏气](https://so.toutiao.com/search?keyword=科学家发现地球正在漏气)
-1. [LNG被零封](https://so.toutiao.com/search?keyword=LNG被零封)
-1. [女子在足疗店按摩遭男技师猥亵](https://so.toutiao.com/search?keyword=女子在足疗店按摩遭男技师猥亵)
-1. [中国战地女记者陈慧慧已成功撤离](https://so.toutiao.com/search?keyword=中国战地女记者陈慧慧已成功撤离)
-1. [菜还没上筷子先花了两元](https://so.toutiao.com/search?keyword=菜还没上筷子先花了两元)
+1. [研究发现血型与疾病的发生有相关性](https://so.toutiao.com/search?keyword=研究发现血型与疾病的发生有相关性)
+1. [石家庄一大桥斜拉索掉落？当地回应](https://so.toutiao.com/search?keyword=石家庄一大桥斜拉索掉落？当地回应)
 1. [长春一医院上空现大量鸟群盘旋](https://so.toutiao.com/search?keyword=长春一医院上空现大量鸟群盘旋)
+1. [中国战地女记者陈慧慧已成功撤离](https://so.toutiao.com/search?keyword=中国战地女记者陈慧慧已成功撤离)
+1. [曝解放军与美军军舰同时现身太平岛](https://so.toutiao.com/search?keyword=曝解放军与美军军舰同时现身太平岛)
 1. [律师解读《重案六组》交换杀妻案](https://so.toutiao.com/search?keyword=律师解读《重案六组》交换杀妻案)
+1. [男子称因脸太方多次应聘被拒](https://so.toutiao.com/search?keyword=男子称因脸太方多次应聘被拒)
+1. [LNG被零封](https://so.toutiao.com/search?keyword=LNG被零封)
+1. [外媒：哈马斯已做好持久战准备](https://so.toutiao.com/search?keyword=外媒：哈马斯已做好持久战准备)
+1. [美媒：拜登竞选团队被巴以冲突搅乱](https://so.toutiao.com/search?keyword=美媒：拜登竞选团队被巴以冲突搅乱)
+1. [以军继续在加沙地带的军事行动](https://so.toutiao.com/search?keyword=以军继续在加沙地带的军事行动)
+1. [以军：加沙已被“一分为二”](https://so.toutiao.com/search?keyword=以军：加沙已被“一分为二”)
+1. [布林肯访土耳其 巴支持者抗议](https://so.toutiao.com/search?keyword=布林肯访土耳其+巴支持者抗议)
+1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
+1. [女子种红薯未收完遭村民哄抢](https://so.toutiao.com/search?keyword=女子种红薯未收完遭村民哄抢)
+1. [奥巴马谈巴以：没有谁的手是干净的](https://so.toutiao.com/search?keyword=奥巴马谈巴以：没有谁的手是干净的)
+1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
+1. [联合国一机构88名员工死于巴以冲突](https://so.toutiao.com/search?keyword=联合国一机构88名员工死于巴以冲突)
+1. [卡德罗夫15岁儿子出任安全部门要职](https://so.toutiao.com/search?keyword=卡德罗夫15岁儿子出任安全部门要职)
+1. [直击东北多地暴雪现场](https://so.toutiao.com/search?keyword=直击东北多地暴雪现场)
+1. [国产大邮轮交付 集齐“三颗明珠”](https://so.toutiao.com/search?keyword=国产大邮轮交付+集齐“三颗明珠”)
+1. [中央金融工作会议后金融反腐推进](https://so.toutiao.com/search?keyword=中央金融工作会议后金融反腐推进)
+1. [福原爱或面临2年以上有期徒刑](https://so.toutiao.com/search?keyword=福原爱或面临2年以上有期徒刑)
+1. [刚插油枪未加油就计费？加油站回应](https://so.toutiao.com/search?keyword=刚插油枪未加油就计费？加油站回应)
+1. [韩国将暂时禁止股票卖空](https://so.toutiao.com/search?keyword=韩国将暂时禁止股票卖空)
+1. [如何看待余承东深夜发文内涵何小鹏](https://so.toutiao.com/search?keyword=如何看待余承东深夜发文内涵何小鹏)
+1. [岸田东南亚之行是否剑指中国](https://so.toutiao.com/search?keyword=岸田东南亚之行是否剑指中国)
+1. [多个“喀秋莎”火箭炮向以色列开火](https://so.toutiao.com/search?keyword=多个“喀秋莎”火箭炮向以色列开火)
+1. [受结冰影响黑龙江27条高速公路封闭](https://so.toutiao.com/search?keyword=受结冰影响黑龙江27条高速公路封闭)
+1. [极好的生活是什么样子？](https://so.toutiao.com/search?keyword=极好的生活是什么样子？)
+1. [外媒：中澳关系出现令人惊讶的逆转](https://so.toutiao.com/search?keyword=外媒：中澳关系出现令人惊讶的逆转)
+1. [人民币兑美元中间价报7.1780](https://so.toutiao.com/search?keyword=人民币兑美元中间价报7.1780)
+1. [阿努诺比：文班的封盖太高了](https://so.toutiao.com/search?keyword=阿努诺比：文班的封盖太高了)
+1. [曝凯恩加盟拜仁后还没有找到房子](https://so.toutiao.com/search?keyword=曝凯恩加盟拜仁后还没有找到房子)
+1. [郑州城区现鸵鸟](https://so.toutiao.com/search?keyword=郑州城区现鸵鸟)
+1. [撒贝宁“新家”安装可折叠激光电视](https://so.toutiao.com/search?keyword=撒贝宁“新家”安装可折叠激光电视)
+1. [东契奇23+12+9 独行侠124-118黄蜂](https://so.toutiao.com/search?keyword=东契奇23+12+9+独行侠124-118黄蜂)
+1. [济南今冬的第一场雪要来了](https://so.toutiao.com/search?keyword=济南今冬的第一场雪要来了)
+1. [中央气象台三预警齐发](https://so.toutiao.com/search?keyword=中央气象台三预警齐发)
+1. [两周内两次挑衅 加拿大意欲何为](https://so.toutiao.com/search?keyword=两周内两次挑衅+加拿大意欲何为)
+1. [韩国瑜做侯友宜副手？李乾龙回应](https://so.toutiao.com/search?keyword=韩国瑜做侯友宜副手？李乾龙回应)
+1. [菜还没上筷子先花了两元](https://so.toutiao.com/search?keyword=菜还没上筷子先花了两元)
 1. [美媒：拜登政府的中东政策彻底失败](https://so.toutiao.com/search?keyword=美媒：拜登政府的中东政策彻底失败)
 1. [以外长要求使馆播放哈马斯袭击片段](https://so.toutiao.com/search?keyword=以外长要求使馆播放哈马斯袭击片段)
-1. [美媒：拜登竞选团队被巴以冲突搅乱](https://so.toutiao.com/search?keyword=美媒：拜登竞选团队被巴以冲突搅乱)
-1. [奥巴马谈巴以：没有谁的手是干净的](https://so.toutiao.com/search?keyword=奥巴马谈巴以：没有谁的手是干净的)
-1. [以军：加沙已被“一分为二”](https://so.toutiao.com/search?keyword=以军：加沙已被“一分为二”)
-1. [女子种红薯未收完遭村民哄抢](https://so.toutiao.com/search?keyword=女子种红薯未收完遭村民哄抢)
 1. [以色列谢莫纳城遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列谢莫纳城遭火箭弹袭击)
-1. [伊朗最高领袖会见哈马斯领导人](https://so.toutiao.com/search?keyword=伊朗最高领袖会见哈马斯领导人)
 1. [文班亚马：仍需向教练队友证明自己](https://so.toutiao.com/search?keyword=文班亚马：仍需向教练队友证明自己)
-1. [福原爱或面临2年以上有期徒刑](https://so.toutiao.com/search?keyword=福原爱或面临2年以上有期徒刑)
 1. [哈马斯喊话古特雷斯呼吁成立委员会](https://so.toutiao.com/search?keyword=哈马斯喊话古特雷斯呼吁成立委员会)
 1. [公职人员猥亵女孩行拘9天纪委介入](https://so.toutiao.com/search?keyword=公职人员猥亵女孩行拘9天纪委介入)
-1. [韩国将暂时禁止股票卖空](https://so.toutiao.com/search?keyword=韩国将暂时禁止股票卖空)
 1. [叙利亚吁国际社会揭露以色列核计划](https://so.toutiao.com/search?keyword=叙利亚吁国际社会揭露以色列核计划)
-1. [男子称因脸太方多次应聘被拒](https://so.toutiao.com/search?keyword=男子称因脸太方多次应聘被拒)
-1. [泽连斯基：以色列夺走西方注意力](https://so.toutiao.com/search?keyword=泽连斯基：以色列夺走西方注意力)
 1. [以军空袭加沙两座居民楼致16死15伤](https://so.toutiao.com/search?keyword=以军空袭加沙两座居民楼致16死15伤)
-1. [女子手指被丈夫2根头发扎出血](https://so.toutiao.com/search?keyword=女子手指被丈夫2根头发扎出血)
 1. [陈楚生被曝成《披荆斩棘》总冠军](https://so.toutiao.com/search?keyword=陈楚生被曝成《披荆斩棘》总冠军)
 1. [网友称母亲去世后不与所有亲戚来往](https://so.toutiao.com/search?keyword=网友称母亲去世后不与所有亲戚来往)
-1. [如何看待余承东深夜发文内涵何小鹏](https://so.toutiao.com/search?keyword=如何看待余承东深夜发文内涵何小鹏)
 1. [官方回应河南一医院讨薪：入不敷出](https://so.toutiao.com/search?keyword=官方回应河南一医院讨薪：入不敷出)
 1. [蓝营议员拱韩国瑜参选 朱立伦回应](https://so.toutiao.com/search?keyword=蓝营议员拱韩国瑜参选+朱立伦回应)
 1. [本赛季罗马是最后时刻进球最多球队](https://so.toutiao.com/search?keyword=本赛季罗马是最后时刻进球最多球队)
@@ -53,14 +76,12 @@
 1. [券商：关注同一股东控制的证券公司](https://so.toutiao.com/search?keyword=券商：关注同一股东控制的证券公司)
 1. [华裔球员陈达毅破门 利物浦1-1卢顿](https://so.toutiao.com/search?keyword=华裔球员陈达毅破门+利物浦1-1卢顿)
 1. [《以爱为营》秦时月想让时宴去道歉](https://so.toutiao.com/search?keyword=《以爱为营》秦时月想让时宴去道歉)
-1. [极好的生活是什么样子？](https://so.toutiao.com/search?keyword=极好的生活是什么样子？)
 1. [第六届中国国际进口博览会开幕](https://so.toutiao.com/search?keyword=第六届中国国际进口博览会开幕)
 1. [巴以冲突已致双方超11300人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超11300人死亡)
 1. [澳总理称将寻求对华“建设性合作”](https://so.toutiao.com/search?keyword=澳总理称将寻求对华“建设性合作”)
 1. [汽车闯红灯撞飞抢绿灯的电动车](https://so.toutiao.com/search?keyword=汽车闯红灯撞飞抢绿灯的电动车)
 1. [脚踢警察女子被采取刑事强制措施](https://so.toutiao.com/search?keyword=脚踢警察女子被采取刑事强制措施)
 1. [记者采访烂尾楼遭开发商野蛮谩骂](https://so.toutiao.com/search?keyword=记者采访烂尾楼遭开发商野蛮谩骂)
-1. [多个“喀秋莎”火箭炮向以色列开火](https://so.toutiao.com/search?keyword=多个“喀秋莎”火箭炮向以色列开火)
 1. [以军在多地与巴勒斯坦人发生冲突](https://so.toutiao.com/search?keyword=以军在多地与巴勒斯坦人发生冲突)
 1. [澳学者在北京向澳总理提出请求](https://so.toutiao.com/search?keyword=澳学者在北京向澳总理提出请求)
 1. [机构：A股反弹行情或贯穿岁末年初](https://so.toutiao.com/search?keyword=机构：A股反弹行情或贯穿岁末年初)
@@ -107,7 +128,6 @@
 1. [预计我国今年将迎“暖冬”](https://so.toutiao.com/search?keyword=预计我国今年将迎“暖冬”)
 1. [大国重器上架淘宝释放了什么信号](https://so.toutiao.com/search?keyword=大国重器上架淘宝释放了什么信号)
 1. [马斯克谈蔚来裁员：他们日子不好过](https://so.toutiao.com/search?keyword=马斯克谈蔚来裁员：他们日子不好过)
-1. [外媒：中澳关系出现令人惊讶的逆转](https://so.toutiao.com/search?keyword=外媒：中澳关系出现令人惊讶的逆转)
 1. [皇马本赛季12胜 7场靠贝林厄姆进球](https://so.toutiao.com/search?keyword=皇马本赛季12胜+7场靠贝林厄姆进球)
 1. [意甲：罗马2-1逆转莱切](https://so.toutiao.com/search?keyword=意甲：罗马2-1逆转莱切)
 1. [《中国乒乓》剧组厦门再同框](https://so.toutiao.com/search?keyword=《中国乒乓》剧组厦门再同框)
@@ -246,6 +266,5 @@
 1. [塞尔维亚总理在进博会推荐本国商品](https://so.toutiao.com/search?keyword=塞尔维亚总理在进博会推荐本国商品)
 1. [教育部部长提出教育面临四大新挑战](https://so.toutiao.com/search?keyword=教育部部长提出教育面临四大新挑战)
 1. [街边摆摊被收4千摊位费？当地回应](https://so.toutiao.com/search?keyword=街边摆摊被收4千摊位费？当地回应)
-1. [撒贝宁“新家”安装可折叠激光电视](https://so.toutiao.com/search?keyword=撒贝宁“新家”安装可折叠激光电视)
 1. [乌兹别克斯坦禁止宣扬一夫多妻](https://so.toutiao.com/search?keyword=乌兹别克斯坦禁止宣扬一夫多妻)
 <!-- END TOUTIAO -->
