--- a/archives/zhihu-search/2023-11-06.md
+++ b/archives/zhihu-search/2023-11-06.md
@@ -1,12 +1,13 @@
 # 2023-11-06
 
-共 10 条
+共 11 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Mon Nov 06 2023 14:00:49 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 06 2023 15:00:43 GMT+0800 (China Standard Time) -->
 1. [双十一手机推荐](https://www.zhihu.com/search?q=双十一手机推荐)
 1. [华为mate60](https://www.zhihu.com/search?q=华为mate60)
 1. [iphone15](https://www.zhihu.com/search?q=iphone15)
+1. [三大指数集体低开](https://www.zhihu.com/search?q=三大指数集体低开)
 1. [华为mate60pro](https://www.zhihu.com/search?q=华为mate60pro)
 1. [智能手表推荐](https://www.zhihu.com/search?q=智能手表推荐)
 1. [显示器](https://www.zhihu.com/search?q=显示器)
