--- a/archives/zhihu-search/2023-11-06.md
+++ b/archives/zhihu-search/2023-11-06.md
@@ -1,15 +1,16 @@
 # 2023-11-06
 
-共 11 条
+共 12 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Mon Nov 06 2023 15:00:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 06 2023 16:01:05 GMT+0800 (China Standard Time) -->
 1. [双十一手机推荐](https://www.zhihu.com/search?q=双十一手机推荐)
 1. [华为mate60](https://www.zhihu.com/search?q=华为mate60)
 1. [iphone15](https://www.zhihu.com/search?q=iphone15)
 1. [三大指数集体低开](https://www.zhihu.com/search?q=三大指数集体低开)
 1. [华为mate60pro](https://www.zhihu.com/search?q=华为mate60pro)
 1. [智能手表推荐](https://www.zhihu.com/search?q=智能手表推荐)
+1. [蓝牙耳机](https://www.zhihu.com/search?q=蓝牙耳机)
 1. [显示器](https://www.zhihu.com/search?q=显示器)
 1. [游戏显示器推荐](https://www.zhihu.com/search?q=游戏显示器推荐)
 1. [流量卡](https://www.zhihu.com/search?q=流量卡)
